# Conference_Server

./: CMakeLists.txt
src/: main.cpp
src/api/: json_response.cpp  json_response.h  video_api.cpp  video_api.h
src/config/: server_config.cpp  server_config.h
src/core/: error_handler.cpp  error_handler.h
src/filesystem/: directory_scanner.cpp  directory_scanner.h  file_utils.cpp  file_utils.h
src/security/: path_validator.cpp  path_validator.h
src/server/: http_server.cpp  http_server.h  route_handler.cpp  route_handler.h
src/utils/: logger.cpp  logger.h  string_utils.cpp  string_utils.h  types.h  types.h .h
src/web/: embedded_resources.cpp  embedded_resources.h  template_engine.cpp  template_engine.h
web_assets/: app.js  index.html  style.css
